          constructor

        - default for 'orphan' attribute of <dtml-in> is now 0 instead 3.

        - Fixed conflict resolution problem in BTrees (BTreeTemplace/
          _p_resolveConflict)

        - Collector #2524: Medusa sent "HTTP/None..." as response header when
          then HTTP version could not be determined from the HTTP request.
          Now sending "HTTP/1.0..."

    Zope 2.4 beta 2

      Bugs fixed

        - Some of the import shenanigans in ZService.py were still 
          trying to load Python 1.5 versions of support dlls for running 
          as a service under win32 (meaning you effectively couldn't).

        - Collector #2335: older products like GadflyDA that did not
          use registerClass() were registered but their visibility
          flag has not been set to Global.  So these products did not
          appear in the ZMF.


    Zope 2.4 beta 1

      Features Added

        - Added a new lesson to the Zope tutorial which shows how to
          insert data into a relational database.

        - Made the meta-type in the upper-left corner of ZClass instances'
          management interface into a link to the ZClass definition.

        - Collector #2316: introduced new environment variable ZSYSLOG_FACILITY
          to override the default syslog facility 'user'

      Bugs fixed

        - Updated the Zope tutorial a bit. Now it references the Zope
          Book and the online help's DTML reference. Replaced ZopeTime
          examples with DateTime in lesson 9.

        - The manage_afterClone hook was called too early for copied objects,
          before the cloned object was reattached to its context. This 
          caused problems with CatalogAware objects reindexing themselves 
          on copy.

        - Fixed a situation that could slow down lazy processing of sorted 
          search results.

        - Product import ordering has been changed.  Now, the total set of